# sparkyscrape

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  socket.ts
frontend/src/api/: channels.ts  store.ts
frontend/src/components/: Difficulty.tsx  Header.tsx  LevelImage.tsx  LevelName.tsx  PastGames.tsx
frontend/src/views/: Channel.tsx  Guess.tsx  Home.tsx
src/: handler.rs  level.rs  main.rs  web.rs
