[package]
name = "sparkyscrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
http = "0.2.11"
image = "0.24.7"
lazy_static = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = "0.11.22"
rustdct = "0.7.1"
serde = "1.0.193"
serde_json = "1.0.108"
serenity = { git = "https://github.com/nshout/serenity-self.git", features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "cache"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.20.1"
